[fix] #184 시험 문제 등록 수정 완료